docker: implement containerization for the project